init commit for a-star-service module